# XBoardGames

./: .gitignore  README.md  Start.md
.review/: code-review-report.md  langgraph-langchain使用报告.md  langgraph决策子图实现报告.md  langgraph教学文章.md  langgraph重构报告.md  llm-langchain决策实现报告.md  前端可玩与多模型配置报告.md  架构-思考与行动-编排设计.md  项目流程报告.md
.review/detailed/: 01-foundation.md  02-rules.md  03-engine.md  04-placeholders.md  05-cli-tests.md  06-frontend-config-games.md  07-phase2-5-implementation.md  README.md
apps/backend/: README.md  alembic.ini  pyproject.toml
apps/backend/app/: __init__.py
apps/backend/app/agents/: __init__.py  decision_graph.py  game_graph.py  langgraph_graph.py  llm.py  orchestrator.py  persona.py  providers.py
apps/backend/app/api/: __init__.py  app.py  play.py  protocol.py  routes_rules.py  serve.py  ws.py
apps/backend/app/cli/: __init__.py  autoplay.py
apps/backend/app/core/: __init__.py  config.py  logging.py  paths.py
apps/backend/app/engine/: __init__.py  engine.py  predicates.py  types.py
apps/backend/app/memory/: __init__.py  bonds.py  consolidation.py  embedding.py  highlights.py  ltm.py  mtm.py  stm.py
apps/backend/app/models/: __init__.py  base.py  entities.py
apps/backend/app/multiplayer/: __init__.py  discovery.py  session_manager.py
apps/backend/app/rules/: __init__.py  compiler.py  parser.py  primitives.py  schema.py
apps/backend/app/storage/: __init__.py  base.py  factory.py  memory.py
apps/backend/migrations/: README.md  env.py
apps/backend/tests/: test_agent_upgrade.py  test_agents.py  test_api.py  test_autoplay.py  test_compiler.py  test_engine.py  test_game_graph.py  test_langgraph.py  test_llm.py  test_memory.py  test_multiplayer.py  test_orchestrator.py  test_play.py  test_predicates.py  test_rules_ingest.py
apps/desktop/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  api.ts  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: Bauhaus.tsx
apps/desktop/src/features/cards/: index.tsx
apps/desktop/src/features/lobby/: index.tsx
apps/desktop/src/features/rules/: index.tsx
apps/desktop/src/features/settings/: index.tsx
apps/desktop/src/features/table/: index.tsx
apps/desktop/src/net/: client.ts
apps/desktop/src/store/: index.ts
apps/desktop/src/styles/: bauhaus.css
games/avalon/: Rule.md
games/werewolf/: Rule.md
